<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/nav_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/andNote_Bot_nav_Home" />
    <item
        android:id="@+id/nav_reminder"
        android:icon="@drawable/ic_assignment_turned_in_black_24dp"
        android:title="@string/andNote_Bot_nav_Reminder" />
    <item
        android:id="@+id/nav_To_Do"
        android:icon="@drawable/ic_featured_play_list_black_24dp"
        android:title="@string/andNote_Bot_nav_To_Do" />
    <item
        android:id="@+id/nav_Note"
        android:icon="@drawable/ic_note_add_black_24dp"
        android:title="@string/andNote_Bot_nav_Note" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/andNote_Bot_nav_Setting" />
</menu>